--- a/index.css
+++ b/index.css
@@ -1,21 +1,18 @@
 :root {
 @import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,400;1,400;1,600&display=swap');
     font-family: 'Raleway', sans-serif;
-
+    --color-primary: #006eed;
+    --color-primary-dark: #005ab3;
+    --color-secondary-dark: #333333;
 }
 
 html {
     height: 100%;
-    background-color: #6bb382;
+    background-color: var(--color-secondary-dark);
     position: relative;
 }
-
-h1, h2 {
-    font-weight: 400;
-}
-
 body {
-    background-color: #2b2b2b;
+    background-color: white;
     position: absolute;
     margin: 0;
     padding: 0;
@@ -33,24 +30,26 @@ header {
     align-items: center;
 }
 svg {
-    fill: white;
+    fill: #b7b7b7;
     padding-left: 1rem;
     transition: 0.3s;
     cursor: pointer;
 }
 
 svg:hover{
-    fill: #e8bf6a;
+    fill: white;
     padding-left: 1rem;
     transition: 0.3s;
 }
 
 section {
-    padding-bottom: 140px;
+    padding-bottom: 120px;
+    padding-left: 16px;
+    padding-right: 16px;
 }
 
 section > h1:first-child {
-    color: #e8bf6a;
+    color: var(--color-primary);
     padding: 1rem;
 }
 
@@ -67,34 +66,47 @@ section > h1:first-child {
 }
 
 .repository-item > * {
-
     margin: 0 1rem;
 }
 
 .repository-item > div:first-child {
-    color: #d6d6d6;
+    color: #575757;
     width: 50%;
     text-align: start;
 }
 
 .repository-item > div:first-child > h2 {
-    color: #6bb382;
+    color: var(--color-primary);
+    margin: 0.5rem 0;
+    font-weight: 400;
 }
 
-.repository-item > div:first-child > a {
-    text-decoration: none;
-    color: #92c157;
-    transition: 0.3s;
+.repository-item > div:first-child > small {
+    color: #979797;
+    font-style: italic;
+    padding-left: 0.5rem;
+    font-size: 0.75rem;
 }
-.repository-item > div:first-child > a:hover {
-    text-decoration: none;
-    color: #c1f564;
-    transition: 0.3s;
 
+.button{
+    text-decoration: none;
+    background-color: var(--color-primary);
+    padding: 0.75rem;
+    color: white;
+    border-radius: 6px;
+    font-size: 0.75rem;
+    transition: 0.3s;
+    display: inline-block;
+}
+
+.button:hover {
+    background-color: var(--color-primary-dark);
+    transition: 0.3s;
 }
 
 .repository-item img {
     width: 200px;
+    padding: 0.5rem;
 }
 
 @media only screen and (max-width: 600px) {
