--- a/index.css
+++ b/index.css
@@ -62,7 +62,9 @@ section > h1:first-child {
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 0;
+    padding: 0.75rem;
+    border: #dddddd 1px solid;
+    box-shadow: 0px 1px 10px #e7e7e7;
 }
 
 .repository-item > * {
